[package]
name = "smt_multiplex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.3"
bigdecimal = "0.3.0"
bitvec = "1.0.0"
utf8-read = "0.4.0"
clap = { version = "4.1.1", features = ["derive"] }
log = "0.4.17"
